Adapt workspace for generic multi-project use with workspace.yml
Replace Hibernate-specific config with a generic workspace.yml that
defines repos, upstream URLs, and build flags. Any project (Roq, Web
Bundler, mvnpm, etc.) can reuse this template by editing workspace.yml.

Key changes:
- Add workspace.yml as single source of truth for project config
- Replace rsync/hardlink .m2 seeding with Maven tail local repository
- Make all skills generic (read repos from workspace.yml)
- Remove Hibernate-specific skill and test script
- Switch .gitignore to allowlist approach for free-form feature names

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>